[tool.poetry]
name = "ai-agent-langchain"
version = "0.1.0"
description = ""
authors = ["Vick Mu <arbi3400@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.2.1"
openai = "^1.30.4"
requests = "^2.32.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
